# paperplanes

./: .gitignore  README.md  pyproject.toml
backend/graffiti_server/: __init__.py  app.py  cells.py  db.py  seed.py
frontend/: .env.example  app.json  package-lock.json  package.json
frontend/.expo/prebuild/: cached-packages.json
frontend/app/: index.tsx
frontend/ios/: Podfile
frontend/ios/Fold/: Info.plist
frontend/ios/Fold.xcodeproj/: project.pbxproj
frontend/ios/Fold.xcodeproj/xcshareddata/xcschemes/: Fold.xcscheme
frontend/src/config/: env.ts  mapbox.ts
frontend/src/types/: memory.ts
frontend/src/utils/: anonymousId.ts  geohash.ts  memoriesApi.ts
frontend/static/: app.js  index.html  styles.css
tests/: test_cells.py  test_db.py
