[project]
name = "graffiti"
version = "0.1.0"
description = "Fold memories into paper planes. Keep them folded, or set them free."
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[project.scripts]
graffiti-api = "backend.graffiti_server.app:main"
graffiti-seed = "backend.graffiti_server.seed:main"

[tool.uv]
package = true

[dependency-groups]
dev = []

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
